hphp/hack/test/typecheck/inout/bad_inout_decl_special_call.php.exp
File "bad_inout_decl_special_call.php", line 4, characters 3-48:
Method C::__call() cannot take inout arguments (Parsing[1002])
File "bad_inout_decl_special_call.php", line 4, characters 39-48:
Methods with special semantics cannot have inout parameters. (NastCheck[3043])
