hphp/hack/test/typecheck/inout/bad_inout_decl_special_call.php
<?hh // partial

class C {
  public function __call($name, inout $arguments) {
    $arguments = varray[];
    return null;
  }
}
